Fixes for minor bugs spotted in runner (#103)
- Added a class to allow buttons to maintain their width on mobile instead of going full width. This was applicable on the "Remove" button on a repeating answer. It came about from the button link style being removed and replaced with the small secondary which didn't look right being 100% width on mobile.

- Added a width to the repeating answers block so that when we float the "remove" button to the right it falls flush with parent content. Before adding the fix it floated flush with the main container.

- The details component required overflow hidden on the content element inside.

--- a/components/question/_question.scss
+++ b/components/question/_question.scss
@@ -92,6 +92,7 @@
 .question--repeatinganswer {
   .question__answer {
     margin-bottom: 2rem;
+    width: 19.5rem;
   }
   .question__guidance--bottom {
     margin: -1rem 0 0;
